<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wolberg.tipcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bill_amount"
        android:id="@+id/billLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip_percent"
        android:id="@+id/tipPercentLabel"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/billLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip_total"
        android:id="@+id/tipTotalLabel"
        android:layout_below="@+id/tipPercentLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Total"
        android:id="@+id/totalLabel"
        android:layout_below="@+id/tipTotalLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipTotalTextView"
        android:text="0.00"
        android:gravity="center"
        android:layout_above="@+id/totalLabel"
        android:layout_alignLeft="@+id/totalTextView"
        android:layout_alignStart="@+id/totalTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalTextView"
        android:text="@string/Total"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:gravity="center"
        android:layout_alignTop="@+id/totalLabel"
        android:layout_toRightOf="@+id/billLabel"
        android:layout_toEndOf="@+id/billLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentTextView"
        android:text="@string/tipPercent"
        android:gravity="center"
        android:layout_alignBottom="@+id/tipPercentLabel"
        android:layout_alignLeft="@+id/tipTotalTextView"
        android:layout_alignStart="@+id/tipTotalTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billAmountEditText"
        android:layout_alignLeft="@+id/percentTextView"
        android:layout_alignStart="@+id/percentTextView"
        android:background="#F5F5DC"
        android:layout_alignRight="@+id/applyButton"
        android:layout_alignEnd="@+id/applyButton" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/percentSeekBar"
        android:indeterminate="false"
        android:max="30"
        android:layout_below="@+id/percentTextView"
        android:layout_alignBottom="@+id/applyButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/applyButton"
        android:layout_toStartOf="@+id/applyButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        android:id="@+id/applyButton"
        android:layout_above="@+id/tipTotalTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="53dp"
        android:layout_marginEnd="53dp" />

</RelativeLayout>
